2020-04-10 location list modifier